--- a/index.html
+++ b/index.html
@@ -7,23 +7,52 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
+
+    <!-- header section start  -->
     <header>
         <section class="container-fluid bg-dark rounded-3 p-lg-5 p-md-2 p-sm-2">
-            <div class="row">
-                <div class="col-lg-5 pt-5 ms-lg-5">
-                    <p class="text-white">Computer-controlled digital transistorized with electronic advance</p>
-                    <h1 class="text-white fs-1 fw-bold">Welcome To <br>
-                        <span class="text-primary">Sameer</span> World!</h1>
-                    <h4 class="mt-4 text-white">Build Climber and Train Stopper</h4>
-                    <p class="mt-4 text-white">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>   
-                    <a href=""><button class="btn btn-primary text-dark" type="submit">Purchase</button></a>
+            <div class="row my-lg-5 mx-auto">
+                <div class="col-lg-5 pt-5 mx-lg-5">
+                    <p class="text-white fs-6">Computer-controlled digital transistorized with electronic advance</p>
+                    <h1 class="text-white fs-1 fw-bold">Honda CBR 300R</h1>
+                    <p class="my-3 text-white fs-6 text-muted">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>   
+                    <a href=""><button class="btn btn-warning text-white px-4 mb-4" type="submit">Purchase</button></a>
                 </div>
-                <div class="col-lg-6 ms-lg-5">
+                <div class="col-lg-5 mx-lg-5">
                     <img class="img-fluid" src="images/header-bike.png" alt="">
                 </div>
             </div> 
         </section>
     </header>
+    <!-- header section end -->
+    
+
+    <!-- main section start -->
+    <main>
+
+        <!-- feature bike section -->
+        <div class="container mt-5">
+            <h1 class="text-center">Featured Bikes 2021</h1>
+            <p class="text-center text-danger">Best Bike Collection</p>
+
+            <div class="row">
+                <div class="col-lg-4 my-3">
+                    <img class="img-fluid" style="filter: grayscale(100%);" src="images/feature-bike.jpg" alt="">
+                </div>
+                <div class="col-lg-4 my-3">
+                    <img class="img-fluid" src="images/feature-bike.jpg" alt="">
+                </div>
+                <div class="col-lg-4 my-3">
+                    <img class="img-fluid" style="filter: grayscale(100%);" src="images/feature-bike.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </main>
+    <!-- main section end -->
 
 
 
