--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honda CBR</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/df1187a88c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -30,8 +31,8 @@
     <!-- main section start -->
     <main>
 
-        <!-- feature bike section -->
-        <div class="container mt-5">
+        <!-- feature bike section start -->
+        <section class="container mt-5">
             <h1 class="text-center">Featured Bikes 2021</h1>
             <p class="text-center text-danger">Best Bike Collection</p>
 
@@ -46,7 +47,66 @@
                     <img class="img-fluid" style="filter: grayscale(100%);" src="images/feature-bike.jpg" alt="">
                 </div>
             </div>
-        </div>
+        </section>
+        <!-- feature bike section end -->
+
+        <!-- client section start  -->
+        <section class="container my-5">
+            <h1 class="text-center">Happy <span class="text-primary">Client Says</span></h1>
+            <div class="row row-cols-1 row-cols-md-3 g-5 mt-5">
+                <div class="col">
+                    <div class="card px-1 py-4">
+                        <img src="images/user-1.png" class="card-img-top w-25 mx-auto d-block" alt="...">
+                        <div class="card-body">
+                            <p class="text-center text-muted mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <div class="text-warning text-center mt-2">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <h6 class="mt-3 text-center text-primary">Regina Miles</h6>
+                            <h6 class="mt-3 text-center">Banker</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card px-1 py-4">
+                        <img src="images/user-2.png" class="card-img-top w-25 mx-auto d-block" alt="...">
+                        <div class="card-body">
+                            <p class="text-center text-muted mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <div class="text-warning text-center mt-2">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <h6 class="mt-3 text-center text-primary">Regina Miles</h6>
+                            <h6 class="mt-3 text-center">Banker</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card px-1 py-4">
+                        <img src="images/user-1.png" class="card-img-top w-25 mx-auto d-block" alt="...">
+                        <div class="card-body">
+                            <p class="text-center text-muted mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <div class="text-warning text-center mt-2">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <h6 class="mt-3 text-center text-primary">Regina Miles</h6>
+                            <h6 class="mt-3 text-center">Banker</h6>
+                        </div>
+                    </div>
+                </div>
+              </div>
+        </section>
 
 
 
