client gutter modified

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
         </section>
         <!-- feature bike section end -->
 
+
         <!-- client section start  -->
         <section class="container my-5">
             <h1 class="text-center">Happy <span class="text-primary">Client Says</span></h1>
-            <div class="row row-cols-1 row-cols-md-3 g-5 mt-5">
+            <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
                 <div class="col">
                     <div class="card px-1 py-4">
                         <img src="images/user-1.png" class="card-img-top w-25 mx-auto d-block" alt="...">
@@ -107,6 +108,7 @@
                 </div>
               </div>
         </section>
+        <!-- client section end  -->
 
 
 
