custom css added

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honda CBR</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/df1187a88c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <!-- header section start  -->
     <header>
-        <section class="container-fluid bg-dark rounded-3 p-lg-5 p-md-2 p-sm-2">
+        <section class="container-fluid cbr-bg rounded-3 p-lg-5 p-md-2 p-sm-2">
             <div class="row my-lg-5 mx-auto">
                 <div class="col-lg-5 pt-5 ms-lg-5 mb-4">
-                    <p class="text-white fs-6">Computer-controlled digital transistorized with electronic advance</p>
-                    <h1 class="text-white fs-1 fw-bold">Honda CBR 300R</h1>
-                    <p class="my-3 text-white fs-6 text-muted">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                    <p class="cbr-p">Computer-controlled digital transistorized with electronic advance</p>
+                    <h1 class="text-white cbr-heading-font">Honda CBR 300R</h1>
+                    <p class="my-3 cbr-p">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
 
                     <!-- modal part  -->
                     <div class="modal fade" id="exampleModalToggle" aria-hidden="true"      aria-labelledby="exampleModalToggleLabel" tabindex="-1">
@@ -55,7 +56,7 @@
                           </div>
                         </div>
                       </div>
-                      <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Purchase</a>
+                      <a class="btn cbr-btn px-5" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Purchase</a>
                     </div>
                 <div class="col-lg-6 mb-4">
                     <img class="img-fluid d-block mx-auto" src="images/header-bike.png" alt="">
@@ -71,7 +72,7 @@
 
         <!-- feature bike section start -->
         <section class="container mt-5">
-            <h1 class="text-center">Featured Bikes 2021</h1>
+            <h1 class="text-center cbr-heading-font">Featured Bikes 2021</h1>
             <p class="text-center text-danger">Best Bike Collection</p>
 
             <div class="row my-5">
@@ -91,13 +92,13 @@
 
         <!-- client section start  -->
         <section class="container my-5">
-            <h1 class="text-center">Happy <span class="text-primary">Client Says</span></h1>
+            <h1 class="text-center cbr-heading-font">Happy <span class="cbr-client-clr">Client Says</span></h1>
             <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
-                <div class="col">
-                    <div class="card px-1 py-4">
+                <div class="col p-lg-4">
+                    <div class="card py-5">
                         <img src="images/user-1.png" class="card-img-top w-25 mx-auto d-block" alt="...">
                         <div class="card-body">
-                            <p class="text-center text-muted mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <p class="text-center cbr-client-description mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
                             <div class="text-warning text-center mt-2">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -110,11 +111,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card px-1 py-4">
+                <div class="col p-lg-4">
+                    <div class="card py-5">
                         <img src="images/user-2.png" class="card-img-top w-25 mx-auto d-block" alt="...">
                         <div class="card-body">
-                            <p class="text-center text-muted mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <p class="text-center cbr-client-description mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
                             <div class="text-warning text-center mt-2">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -127,11 +128,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card px-1 py-4">
+                <div class="col p-lg-4">
+                    <div class="card py-5">
                         <img src="images/user-1.png" class="card-img-top w-25 mx-auto d-block" alt="...">
                         <div class="card-body">
-                            <p class="text-center text-muted mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <p class="text-center cbr-client-description mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
                             <div class="text-warning text-center mt-2">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
