--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
         </section>
         <!-- carousel section end  -->
 
-        
     </header>
     <!-- header section end -->
     
@@ -157,7 +156,7 @@
                     <div class="card py-5">
                         <img src="images/user-1.png" class="card-img-top w-25 mx-auto d-block" alt="...">
                         <div class="card-body">
-                            <p class="text-center cbr-client-description mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <p class="text-center cbr-client-description mb-0 mt-2">One of the best service live in market. Tasted many other. But this bike is literally awesome. Wanna co operate more with them.</p>
                             <div class="text-warning text-center mt-2">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -174,7 +173,7 @@
                     <div class="card py-5">
                         <img src="images/user-2.png" class="card-img-top w-25 mx-auto d-block" alt="...">
                         <div class="card-body">
-                            <p class="text-center cbr-client-description mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <p class="text-center cbr-client-description mb-0 mt-2">One of the best service live in market. Tasted many other. But this bike is literally awesome. Wanna co operate more with them.</p>
                             <div class="text-warning text-center mt-2">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -191,7 +190,7 @@
                     <div class="card py-5">
                         <img src="images/user-1.png" class="card-img-top w-25 mx-auto d-block" alt="...">
                         <div class="card-body">
-                            <p class="text-center cbr-client-description mb-0 mt-2">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                            <p class="text-center cbr-client-description mb-0 mt-2">One of the best service live in market. Tasted many other. But this bike is literally awesome. Wanna co operate more with them.</p>
                             <div class="text-warning text-center mt-2">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
